Finish Virtual Threads Approach